feat: Profile, Pfp, authStore and more views

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -4,7 +4,7 @@
 
 :root {
   /* Colores principales */
-  --primary: #10b981; /*from-emerald-500*/
+  --primary: #10b981;
   --primary-dark: #059669;
   --secondary: #3b82f6;
   --accent: #f59e0b;
